--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,7 +5,7 @@
     height: 52px;
     display: flex;
     justify-content: end;
-    gap: 18px
+    gap: 18px;
 }
 
 @media screen and (max-width: 768px) {
