--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,6 +7,7 @@
     line-height: 76px;
     letter-spacing: 0em;
     text-align: left;
+    color: #fff;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
