--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,7 @@
 .cover__subtitle {
     margin: 0;
     width: 360px;
-    font-family: Inter;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
