--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,7 +1,7 @@
 .cover__title {
     margin: 0;
     width: 560px;
-    font-family: Inter;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-size: 72px;
     font-weight: 900;
     line-height: 76px;
