--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,12 +1,11 @@
 .footer__copyright {
     width: 186px;
     margin: 0;
-    font-family: Inter;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 16px;
     letter-spacing: 0em;
-    text-align: right;
     color: #fff;
 }
 
