--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -5,7 +5,7 @@
     display: flex;
     column-gap: 18px;
     list-style: none;
-    font-family: Inter;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 18px;
