--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,12 +1,18 @@
 .intro__text {
-    width: 100%;
+    width: 690px;
     margin: 0;
     padding-top: 40px;
     color: #fff;
-    font-family: Inter;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
     letter-spacing: 0em;
     text-align: left;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .intro__text {
+        width: 100%;
+    }
 }
