--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,13 +1,20 @@
 .intro__title {
-    width: 100%;
+    width: 690px;
     margin: 0;
+    margin-right: auto;
     color: #fff;
     font-size: 54px;
+    font-style: normal;
     font-weight: 900;
     line-height: 58px;
     letter-spacing: 0em;
-    text-align: left;
-    font-family: Inter;
+    font-family: 'Inter', 'Arial', sans-serif;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .intro__title {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 767px) {
