--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,28 +1,19 @@
 .intro {
-    width: 690px;
-    margin: 0;
-    margin-left: 11.5%;
-    margin-right: 34.5%;
-    padding-top: 92px;
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-    .intro {
-        margin-left: 4.7%;
-        margin-right: 28%;
-    }
+    max-width: 984px;
+    margin: 0 auto;
+    padding: 92px 48px 0;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .intro {
         width: 94%;
-        margin: 0 auto;
+        padding: 88px 0 0;
     }
 }
 
 @media screen and (max-width: 767px) {
     .intro {
         width: 90%;
-        margin: 0 auto;
+        padding-top: 64px;
     }
 }
