--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,7 +4,7 @@
     padding-top: 8px;
     align-self: flex-start;
     color:#fff;
-    font-family: Inter;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-weight: 400;
     line-height: 14px;
     letter-spacing: 1.5px;
