--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,7 +8,7 @@
     font-weight: 400;
     line-height: 36px;
     letter-spacing: 0em;
-    font-family: Inter;
+    font-family: 'Inter', 'Arial', sans-serif;
 }
 
 @media screen and (max-width: 767px) {
