--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,7 +7,7 @@
     font-weight: 900;
     line-height: 100px;
     letter-spacing: 0em;
-    font-family: Inter;
+    font-family: 'Inter', 'Arial', sans-serif;
 }
 
 @media screen and (max-width: 767px) {
