--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,7 +1,7 @@
 .lead {
     margin: 0 auto;
-    padding-top: 56px;
-    width: 77%;
+    padding: 56px 48px 0;
+    max-width: 984px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,15 +10,12 @@
 @media screen and (min-width: 769px) and (max-width: 1279px) {
     .lead {
         padding-top: 48px;
-        margin: 0 auto;
-        width: 91%;
     }
 }
 
 @media screen and (max-width: 768px) {
     .lead {
         width: 100%;
-        padding-top: 48px;
-        margin: 0;
+        padding: 48px 0 0;
     }
 }
