--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,7 @@
 .photo-grid {
-    width: 92.5%;
-    margin: 0 3.75%;
-    padding-top: 92px;
+    max-width: 1184px;
+    margin: 0 auto;
+    padding: 92px 48px 0;
     display: grid;
     grid-template-columns: repeat(4 , 1fr);
     grid-template-rows: auto;
@@ -10,28 +10,22 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .photo-grid {
-        width: 91%;
-        margin: 0 4.7%;
         grid-template-columns: repeat(3 , 1fr);
         gap: 14px;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 426px) and (max-width: 1023px) {
     .photo-grid {
-        width: 94%;
-        margin: 0 3.125%;
-        padding-top: 88px;
+        padding: 88px 24px 0;
         grid-template-columns: repeat(2 , 1fr);
         gap: 16px;
     }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 425px) {
     .photo-grid {
-        width: 90%;
-        margin: 0 5%;
-        padding-top: 64px;
+        padding: 64px 16px 0;
         grid-template-columns: 1fr;
         row-gap: 12px;
     }
