--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,7 +1,7 @@
 .place__title {
     width: min(43vw, 460px);
     margin: 0;
-    font-family: Inter;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-size: 72px;
     font-weight: 900;
     line-height: 76px;
