--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,7 +1,7 @@
 .place__url-heading {
     width: 100%;
     margin: 0;
-    font-family: Inter;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-size: 12px;
     font-weight: 400;
     line-height: 12px;
