--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,6 +1,7 @@
 .places {
     margin: 0 auto;
-    width: min(91%, 984px);
+    max-width: 984px;
+    padding: 92px 48px 0;
     padding-top: 92px;
     display: flex;
     flex-direction: column;
@@ -9,16 +10,14 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .places {
-        width: min(93.75%, 928px);
-        padding-top: 88px;
+        padding: 88px 24px 0;
         row-gap: 73px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .places {
-        width: 100%;
-        padding-top: 64px;
+        padding: 64px 0 0;
         row-gap: 50px;
     }
 }
