--- a/fonts/font-face.css
+++ b/fonts/font-face.css
@@ -1,11 +1,26 @@
 @font-face {
     font-family: 'Inter';
     font-weight: 400;
-    src: url(../fonts/Inter-Regular.otf);
+    src: url('Inter-Regular.woff2') format('woff2'),
+         url('Inter-Regular.woff') format('woff'),
+         url('Inter-Regular.ttf') format('truetype'),
+         url('Inter-Regular.otf') format('eot');
+}
+
+@font-face {
+    font-family: 'Inter';
+    font-weight: 700;
+    src: url('Inter-Bold.woff2') format('woff2'),
+         url('Inter-Bold.woff') format('woff'),
+         url('Inter-Bold.ttf') format('truetype'),
+         url('Inter-Bold.otf') format('eot');
 }
 
 @font-face {
     font-family: 'Inter';
     font-weight: 900;
-    src: url(../fonts/Inter-Black.otf);
+    src: url('Inter-Black.woff2') format('woff2'),
+         url('Inter-Black.woff') format('woff'),
+         url('Inter-Black.ttf') format('truetype'),
+         url('Inter-Black.otf') format('eot'); 
 }
