--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -15,8 +15,9 @@
     text-align: left;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
     .intro__list {
         width: 100%;
+        margin-right: 0;
     }
 }
