--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,7 @@
 .intro__text {
     width: 690px;
     margin: 0;
+    margin-right: auto;
     padding-top: 40px;
     color: #fff;
     font-family: 'Inter', 'Arial', sans-serif;
@@ -11,8 +12,9 @@
     text-align: left;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
     .intro__text {
         width: 100%;
+        margin-right: 0;
     }
 }
