--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -14,11 +14,14 @@
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .intro__title {
         width: 100%;
+        margin-right: 0px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .intro__title {
+        width: 100%;
+        margin-right: 0px;
         line-height: 35px;
         font-size: 32px;
     }
