--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -14,6 +14,6 @@
 @media screen and (max-width: 767px) {
     .intro {
         width: 90%;
-        padding-top: 64px;
+        padding: 64px 0 0;
     }
 }
