--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,5 @@
 .cover {
-    width: min(100vw, 1184px);
+    max-width: 1184px;
     height: min(62.5vw, 740px);
     background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(../../images/cover-trains.jpg);
     background-clip: content-box;
