--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,14 +2,20 @@
     margin: 0 auto;
     padding: 28px 48px 0;
     max-width: 1184px;
-    height: 52px;
     display: flex;
-    justify-content: end;
-    gap: 18px;
+    justify-content: space-between;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 368px) and (max-width: 816px) {
     .header {
+        max-width: 720px;
         padding: 28px 24px 0;
+    }
+}
+
+@media screen and (max-width: 367px) {
+    .header {
+        max-width: 320px;
+        padding: 16px 16px 0;
     }
 }
