--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,12 +1,11 @@
 .place {
-    width: 100%;
-    column-gap: min(3.125vw, 40px);
+    justify-content: space-between;
     row-gap: 48px;
     display: flex;
     flex-wrap: wrap;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 690px) {
     .place {
         flex-direction: column;
         align-items: center;
