--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,6 @@
 .cover__title {
     margin: 0;
-    width: 560px;
+    max-width: 560px;
     font-family: 'Inter', 'Arial', sans-serif;
     font-size: 72px;
     font-weight: 900;
@@ -13,8 +13,8 @@
 
 @media screen and (max-width: 767px) {
     .cover__title {
-        width: min(90vw, 560px);
-        font-size: min(72px, 10vw);
-        line-height: min(76px, 10.9vw);
+        width: 90%;
+        font-size: 32px;
+        line-height: 35px;
     }
 }
