--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,16 +6,22 @@
     justify-content: space-between;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 368px) and (max-width: 816px) {
     .footer {
+        max-width: 720px;
         padding: 88px 24px 24px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .footer {
-        min-width: 186px;
-        padding: 64px 118px 24px 16px;
         flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 367px) {
+    .footer {
+        max-width: 320px;
+        padding: 64px 118px 24px 16px;
     }
 }
