--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,21 +1,17 @@
-.header__lang-link {
-    width: 30px;
-    margin: 0;
-    padding: 18px 0 6px;
+.header__lang-link {    
     font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
-    line-height: 1.2;
+    line-height: 28px;
     color: #fff;
     text-decoration: none;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 367px) {
     .header__lang-link {
-        width: 22px;
-        height: 20px;
         font-size: 18px;
-        line-height: 1.1;
+        line-height: 20px;
     }
 }
+
