--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,8 +1,7 @@
 .intro__list {
-    width: 690px;
+    max-width: 690px;
     display: block;
-    margin: 0;
-    margin-right: auto;
+    margin: 0 auto 0 0;
     padding-top: 33px;
     padding-inline-start: 0;
     list-style: none;
@@ -15,9 +14,9 @@
     text-align: left;
 }
 
-@media screen and (max-width: 1023px) {
+
+@media screen and (min-width: 368px) and (max-width: 816px) {
     .intro__list {
-        width: 100%;
-        margin-right: 0;
+        max-width: 100%;
     }
 }
