--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,7 +1,6 @@
 .intro__text {
-    width: 690px;
-    margin: 0;
-    margin-right: auto;
+    max-width: 690px;
+    margin: 0 auto 0 0;
     padding-top: 40px;
     color: #fff;
     font-family: 'Inter', 'Arial', sans-serif;
@@ -12,9 +11,8 @@
     text-align: left;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (min-width: 368px) and (max-width: 816px) {
     .intro__text {
-        width: 100%;
-        margin-right: 0;
+        max-width: 100%;
     }
 }
