--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,16 +4,16 @@
     padding: 92px 48px 0;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 368px) and (max-width: 816px) {
     .intro {
-        width: 94%;
-        padding: 88px 0 0;
+        max-width: 720px;
+        padding: 88px 24px 0;
     }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 367px) {
     .intro {
         width: 90%;
-        padding: 64px 0 0;
+        padding: 64px 16px 0;
     }
 }
