--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,6 @@
 .lead__subtitle {
-    width: 640px;
-    margin: 0;
+    max-width: 640px;
+    margin: 0 auto;
     padding-top: 32px;
     color: #fff;
     text-align: center;
@@ -11,9 +11,10 @@
     font-family: 'Inter', 'Arial', sans-serif;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 700px) {
     .lead__subtitle {
         width: 90%;
+        padding-top: 16px;
         line-height: 20px;
         font-size: 16px;
     }
