--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,6 +1,6 @@
 .lead__title {
-    width: 720px;
-    margin: 0;
+    max-width: 720px;
+    margin: 0 auto;
     color: #fff;
     text-align: center;
     font-size: 96px;
@@ -10,7 +10,7 @@
     font-family: 'Inter', 'Arial', sans-serif;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 700px) {
     .lead__title {
         width: 90%;
         font-size: 40px;
