--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,21 +1,12 @@
 .lead {
-    margin: 0 auto;
-    padding: 56px 48px 0;
     max-width: 984px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin: 0 auto;
+    padding-top: 64px;
 }
 
-@media screen and (min-width: 769px) and (max-width: 1279px) {
+@media screen and (max-width: 1024px) {
     .lead {
+        max-width: 928px;
         padding-top: 48px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .lead {
-        width: 100%;
-        padding: 48px 0 0;
     }
 }
