--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,5 @@
 .place__title {
-    width: min(43vw, 460px);
+    width: 47%;
     margin: 0;
     font-family: 'Inter', 'Arial', sans-serif;
     font-size: 72px;
@@ -12,16 +12,15 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .place__title {
-        width: min(44.3vw, 440px);
-        font-size: min(5.5vw, 72px);
-        line-height: min(76px, 6vw);
+        font-size: 42px;
+        line-height: 46px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .place__title {
-        width: 90vw;
-        font-size: max(32px, 5.5vw);
-        line-height: max(36px, 6vw);
+        width: 90%;
+        font-size: 32px;
+        line-height: 35px;
     }
 }
