--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,19 +1,14 @@
 .place__website {
-    width: 456px;
+    width: 49%;
     display: flex;
     flex-direction: column;
     row-gap: 12px;
     justify-content: end;
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .place__website {
-        width: min(45.8vw, 456px);
-    }
+    align-items: start;
 }
 
 @media screen and (max-width: 767px) {
     .place__website {
-        width: 90vw;
+        width: 90%;
     }
 }
