--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,6 +1,6 @@
 .places {
-    margin: 0 auto;
     max-width: 984px;
+    margin: 0 auto;
     padding: 92px 48px 0;
     padding-top: 92px;
     display: flex;
@@ -8,15 +8,17 @@
     row-gap: 80px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 368px) and (max-width: 816px) {
     .places {
+        max-width: 720px;
         padding: 88px 24px 0;
         row-gap: 73px;
     }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 367px) {
     .places {
+        max-width: 320px;
         padding: 64px 0 0;
         row-gap: 50px;
     }
