--- a/fonts/fonts-face.css
+++ b/fonts/fonts-face.css
@@ -1,26 +1,30 @@
 @font-face {
     font-family: 'Inter';
     font-weight: 400;
+    font-style: normal;
+    font-display: swap;
     src: url('Inter-Regular.woff2') format('woff2'),
          url('Inter-Regular.woff') format('woff'),
          url('Inter-Regular.ttf') format('truetype'),
-         url('Inter-Regular.otf') format('eot');
+         url('Inter-Regular.otf') format('opentype');
 }
 
 @font-face {
     font-family: 'Inter';
     font-weight: 700;
+    font-style: normal;
     src: url('Inter-Bold.woff2') format('woff2'),
          url('Inter-Bold.woff') format('woff'),
          url('Inter-Bold.ttf') format('truetype'),
-         url('Inter-Bold.otf') format('eot');
+         url('Inter-Bold.otf') format('opentype');
 }
 
 @font-face {
     font-family: 'Inter';
     font-weight: 900;
+    font-style: normal;
     src: url('Inter-Black.woff2') format('woff2'),
          url('Inter-Black.woff') format('woff'),
          url('Inter-Black.ttf') format('truetype'),
-         url('Inter-Black.otf') format('eot'); 
+         url('Inter-Black.otf') format('opentype'); 
 }
