--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,6 @@
 .cover__subtitle {
-    margin: 0;
+    margin: 0 auto;
+    padding-top: 32px;
     max-width: 360px;
     font-family: 'Inter', 'Arial', sans-serif;
     font-size: 18px;
@@ -13,6 +14,7 @@
 @media screen and (max-width: 767px) {
     .cover__subtitle { 
         width: 90%;
+        padding-top: 16px;
         font-size: 14px;
         line-height: 16px;
     }
