--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,5 @@
 .cover__title {
-    margin: 0;
+    margin: 0 auto;
     max-width: 560px;
     font-family: 'Inter', 'Arial', sans-serif;
     font-size: 72px;
