--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,11 @@
 @import url(../vendor/normalize.css);
-@import url(../fonts/fonts-face.css);
+@import url(../fonts/fonts.css);
 
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/header/header__lang-links/__lang-links.css);
+@import url(../blocks/header/__lang-links/header__lang-links.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
 
@@ -37,8 +37,8 @@
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 
 @import url(../blocks/cover/cover.css);
+@import url(../blocks/cover-link/cover-link.css);
 @import url(../blocks/cover/__title/cover__title.css);
-@import url(../blocks/cover/__title-link/cover__title-link.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 
 @import url(../blocks/footer/footer.css);
